# T15842-exponentiation-PrelRules

./: .gitignore  Makefile  Readme.md  T15842-exponentiation-PrelRules.cabal  cabal.project  default.nix  hie.yaml  result.txt  shell.nix
ghc-8.6.5_dumps/src/: Main.dump-asm  Main.dump-call-arity  Main.dump-cmm  Main.dump-cmm-from-stg  Main.dump-cse  Main.dump-ds  Main.dump-ds-preopt  Main.dump-exitify  Main.dump-prep  Main.dump-rn-ast  Main.dump-rule-rewrites  Main.dump-simpl  Main.dump-simpl-iterations  Main.dump-simpl-stats  Main.dump-spec  Main.dump-stg  Main.dump-stranal  Main.dump-worker-wrapper  Main.verbose-core2core
ghc-8.8.1_dumps/src/: Main.dump-asm  Main.dump-call-arity  Main.dump-cmm  Main.dump-cmm-from-stg  Main.dump-cse  Main.dump-ds  Main.dump-ds-preopt  Main.dump-exitify  Main.dump-prep  Main.dump-rn-ast  Main.dump-rule-rewrites  Main.dump-simpl  Main.dump-simpl-iterations  Main.dump-simpl-stats  Main.dump-spec  Main.dump-stg  Main.dump-stranal  Main.dump-worker-wrapper  Main.verbose-core2core
ghc-8.9.20190924_dumps/src/: Main.dump-asm  Main.dump-call-arity  Main.dump-cmm  Main.dump-cmm-from-stg  Main.dump-cse  Main.dump-ds  Main.dump-ds-preopt  Main.dump-exitify  Main.dump-prep  Main.dump-rn-ast  Main.dump-rule-rewrites  Main.dump-simpl  Main.dump-simpl-iterations  Main.dump-simpl-stats  Main.dump-spec  Main.dump-stg  Main.dump-stranal  Main.dump-worker-wrapper  Main.verbose-core2core
ghc-with-rules_dumps/src/: Main.dump-asm  Main.dump-call-arity  Main.dump-cmm  Main.dump-cmm-from-stg  Main.dump-cse  Main.dump-ds  Main.dump-ds-preopt  (+12 more)
src/: Main.hs
