cabal-version:       2.4

name:                T15842-exponentiation-PrelRules
version:             0.1.0.0
synopsis:            Some experiments for solving GHC #15842
homepage:            https://github.com/supersven/ghc-experiments
license:             BSD-2-Clause
license-file:        LICENSE
author:              Sven Tennie
maintainer:          sven.tennie@gmail.com
extra-source-files:  CHANGELOG.md

executable main
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       deepseq
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -ddump-simpl-stats -ddump-to-file -ddump-rules -ddump-rule-rewrites -ddump-rule-firings -ddump-asm -ddump-rn-ast -ddump-ds -ddump-simpl -ddump-stg -ddump-cmm-from-stg -ddump-cmm -ddump-simpl-iterations -dverbose-core2core -ddump-ds-preopt  -dcore-lint -dumpdir ghc_dumps

